# med-crew

./: .gitignore  LICENSE  README.md
medgemma_crew/: README.md  pyproject.toml
medgemma_crew/src/interface/: app.py
medgemma_crew/src/interface/logs/: dataset1.csv
medgemma_crew/src/medgemma_crew/: crew.py  main.py
medgemma_crew/src/medgemma_crew/config/: agents.yaml  tasks.yaml
medgemma_crew/src/medgemma_crew/tools/: __init__.py  custom_tool.py  docx_transforming.py  robust_converter.py  xray_anomaly_locator.py
