[project]
name = "medgemma_crew"
version = "0.1.0"
description = "medgemma-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "python-docx>=1.2.0",
    "torch>=2.10.0",
    "torchxrayvision>=1.4.0",
    "transformers>=5.2.0",
]

[project.scripts]
medgemma_crew = "medgemma_crew.main:run"
run_crew = "medgemma_crew.main:run"
train = "medgemma_crew.main:train"
replay = "medgemma_crew.main:replay"
test = "medgemma_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
